--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/papaparse": "^5.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-seo": "7.0.1",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.6",
     "papaparse": "^5.5.3",
     "playwright": "^1.57.0",
     "react": "19.2.3",
