--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
       }
     ],
     "paths": {
-      "@/features/*": ["./src/features/*"],
+      "@/actions/*": ["./src/app/actions/*"],
       "@/components/*": ["./src/components/*"],
       "@/data/*": ["./src/data/*"],
+      "@/features/*": ["./src/features/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/public/*": ["./public/*"],
       "@/styles/*": ["./src/styles/*"],
